--- a/lab_01/отчёт/13-research.tex
+++ b/lab_01/отчёт/13-research.tex
@@ -19,14 +19,41 @@
         \hline
         Левенштейна (матричный) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0& 0.0 \\
         Левенштейна (рекурсивный) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0022 & 0.014 & 0.056 \\
-        Левенштейна (рекурс.-мат.) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\
+        Левенштейна (рекурс-мат.) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\
         Дамерау-Левенштейна (матричный) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\
         Дамерау-Левенштейна (рекурсивный) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0019 & 0.0097 & 0.054 \\
-        Дамерау-Левенштейна (рекурс.-мат.) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\
+        Дамерау-Левенштейна (рекурс-мат.) & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 \\
         \hline
     \end{tabular}
     \caption{Таблица времени (сек) работы всех алгоритмов в зависимости от длин строк (сим)}
     \label{table:table_all}
+\end{table}
+
+Кроме того, замеры времени работы всех алгоритмов были проведены на микроконтроллерах STM32. На графике~\ref{fig:graph_all_micro} и в таблице~\ref{table:table_all_micro} приведены замеры на длинах строк от 1 символа до 6 с шагом 1 и запуском каждого по 10 раз.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{img/graph_all_micro.png}
+    \caption{График времени работы всех алгоритмов в зависимости от длин строк (замеры на микроконтроллерах)}
+    \label{fig:graph_all_micro} % Метка для ссылки на картинку
+\end{figure}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|l|c|c|c|c|c|c|}
+        \hline
+        \textbf{Алгоритм} & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
+        \hline
+        Левенштейна (матричный) & 0.0001 & 0.0002 & 0.0003 & 0.0005 & 0.0007 & 0.0009 \\
+        Левенштейна (рекурсивный) & 0.0001 & 0.0005 & 0.0026 & 0.0138 & 0.0732 & 0.3941 \\
+        Левенштейна (рекурс-мат.) & 0.0003 & 0.0007 & 0.0015 & 0.0026 & 0.0043 & 0.0060 \\
+        Дамерау-Левенштейна (матрич.) & 0.0000 & 0.0002 & 0.0004 & 0.0006 & 0.0009 & 0.00013 \\
+        Дамерау-Левенштейна (рекурс.) & 0.0001 & 0.0006 & 0.0029 & 0.0151 & 0.0801 & 0.4233 \\
+        Дамерау-Левенштейна (рек-мат.) & 0.0003 & 0.0007 & 0.0015 & 0.0029 & 0.0045 & 0.0065 \\
+        \hline
+    \end{tabular}
+    \caption{Таблица времени (сек) работы всех алгоритмов в зависимости от длин строк (сим) (замеры на микроконтроллерах)}
+    \label{table:table_all_micro}
 \end{table}
 
 \subsection{Сравнение работы матричной, рекурсивной и рекурсивно-матричной реализаций алгоритмов}
@@ -98,8 +125,8 @@
         \hline
         \textbf{Алгоритм} & \textbf{25} & \textbf{50} & \textbf{75} & \textbf{100} & \textbf{125}\\
         \hline
-        Левенштейна (рек-мат) & 0.00063 & 0.0013 & 0.0016 & 0.0041 & 0.0094 \\
-        Дамерау-Левенштейна (рек-мат) & 0.0 & 0.0025 & 0.0028 & 0.0053 & 0.013  \\
+        Левенштейна (рек-мат.) & 0.00063 & 0.0013 & 0.0016 & 0.0041 & 0.0094 \\
+        Дамерау-Левенштейна (рек-мат.) & 0.0 & 0.0025 & 0.0028 & 0.0053 & 0.013  \\
         \hline
     \end{tabular}
     \caption{Таблица времени (сек) работы рекурсивно-матричных реализаций алгоритмов в зависимости от длин строк (сим)}
@@ -127,13 +154,38 @@
         \textbf{Алгоритм} & \textbf{25} & \textbf{50} & \textbf{75} & \textbf{100} & \textbf{125}\\
         \hline
         Левенштейна (матричный) & 0.0 & 0.00063 & 0.00094 & 0.00094 & 0.00094 \\
-        Левенштейна (рек-мат) & 0.00031 & 0.0016 & 0.0025 & 0.0069 & 0.011 \\
+        Левенштейна (рек-мат.) & 0.00031 & 0.0016 & 0.0025 & 0.0069 & 0.011 \\
         Дамерау-Левенштейна (матричный) & 0.0 & 0.00031 & 0.00094 & 0.0019 & 0.0013 \\
-        Дамерау-Левенштейна (рек-мат) & 0.00031 & 0.0022 & 0.005 & 0.0075 & 0.014 \\
+        Дамерау-Левенштейна (рек-мат.) & 0.00031 & 0.0022 & 0.005 & 0.0075 & 0.014 \\
         \hline
     \end{tabular}
     \caption{Таблица времени (сек) работы матричных и рекурсивно-матричных реализаций алгоритмов в зависимости от длин строк (сим)}
     \label{table:table_mat_rec-mat}
+\end{table}
+
+Кроме того, замеры времени работы матричных и рекурсивно-матричных алгоритмов были проведены на микроконтроллерах STM32. На графике~\ref{fig:graph_mat_rec-mat_micro} и в таблице~\ref{table:table_mat_rec-mat_micro} приведены замеры на длинах строк от 5 символов до 45 с шагом 5 и запуском каждого по 20 раз.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{img/graph_mat_rec-mat_micro.png}
+    \caption{График времени работы матричных и рекурсивно-матричных реализаций алгоритмов в зависимости от длин строк (замеры на микроконтроллерах)}
+    \label{fig:graph_mat_rec-mat_micro} % Метка для ссылки на картинку
+\end{figure}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|l|c|c|c|c|c|c|c|c|c|}
+        \hline
+        \textbf{Алгоритм} & \textbf{5} & \textbf{10} & \textbf{15} & \textbf{20} & \textbf{25} & \textbf{30} & \textbf{35} & \textbf{40} & \textbf{45} \\
+        \hline
+        Левенш(м) & 0.0007 & 0.0025 & 0.0053 & 0.0095 & 0.0146 & 0.0214 & 0.0292 & 0.0385 & 0.0492 \\
+        Левенш(р-м) & 0.0042 & 0.0171 & 0.0394 & 0.0715 & 0.1138 & 0.1652 & 0.2277 & 0.3029 & 0.3876 \\
+        Дам-Лев(м) & 0.0009 & 0.0036 & 0.0081 & 0.0143 & 0.0228 & 0.0335 & 0.0458 & 0.0607 & 0.0782 \\
+        Дам-Лев(р-м) & 0.0045 & 0.0187 & 0.0431 & 0.0783 & 0.1244 & 0.1810 & 0.2505 & 0.3317 & 0.4253 \\
+        \hline
+    \end{tabular}
+    \caption{Таблица времени (сек) работы матричных и рекурсивно-матричных реализаций алгоритмов в зависимости от длин строк (сим) (замеры на микроконтроллерах)}
+    \label{table:table_mat_rec-mat_micro}
 \end{table}
 
 По результатам приведённых графиков видно, что и в алгоритме Левенштейна и Дамерау-Левенштейна рекурсивно-матричный метод работает дольше матричного. Это объясняется затратами на вызов функции при рекурсии и на дополнительные проверки является ли искомое значение уже посчитанным. На небольших длинах строк разница в скорости работы алгоритмов отличается несущественно, однако с увеличением данных растёт и разница во времени.
