--- a/lab_02/отчёт/03-intro.tex
+++ b/lab_02/отчёт/03-intro.tex
@@ -1,23 +1,26 @@
 % Введение
-\section*{Введение}
+% Центрируем заголовок и делаем его капсом
+\begin{center}
+    \MakeUppercase{\large Введение}
+\end{center}
+\addcontentsline{toc}{section}{Введение} % Добавляем в оглавление
 
-\hspace{1.25cm}
-Цель лабораторной работы: исследовать алгоритмы вычисления расстояния Левенштейна и Дамерау-Левенштейна в матричной, рекурсивно-матричной и рекурсивной реализациях.
+Цель работы: рассмотреть различные алгоритмы умножения матриц (стандартный алгоритм, алгоритм Винограда и его оптимизированная версия). Также будет изучена оценка сложности алгоритмов и получены навыки по их улучшению.
 
 \vspace{0.25cm}
 Для достижения этой цели были поставлены следующие задачи:
 
 \begin{itemize}
 
-\item рассмотреть алгоритм вычисления расстояния Левенштейна;
+\item рассмотреть стандартный алгоритм умножения матриц и алгоритм Винограда;
 
-\item рассмотреть алгоритм вычисления расстояния Дамерау-Левенштейна;
+\item оптимизировать алгоритм Винограда методом по варианту;
 
-\item применить метод динамического программирования для матричных реализаций алгоритмов;
+\item провести теоретическую оценку сложности стандартного алгоритма умножения матриц, алгоритма Винограда и его оптимизированной версии;
 
-\item сравнить матричную, рекурсивно-матричную и рекурсивную реализации алгоритмов;
+\item реализовать три алгоритма умножения матриц на выбранном языке программирования;
 
-\item сравнить алгоритмы вычисления расстояния Левенштейна и Дамерау-Левенштейна.
+\item сравнить эффективность этих алгоритмов на практике.
 
 \end{itemize}
 
