--- a/lab_02/отчёт/10-analitic.tex
+++ b/lab_02/отчёт/10-analitic.tex
@@ -1,125 +1,104 @@
 % Основная часть
 \section{Аналитическая часть}
-\subsection{Редакционное расстояние между двумя строками}
+
+\subsection{Базовые понятия матриц}
 
 \hspace{1.25cm}
-Часто требуется измерить различие или расстояние между двумя строками (например, в эволюционных, структуральных или функциональных исследованиях биологических строк, в хранении текстовых баз данных, в методах проверки правописания). Есть несколько способов формализации понятия расстояния между строками. Одна общая и простая, формализация называется редакционным расстоянием; она основана на преобразовании (или редактировании) одной строки в другую серией операций редактирования, выполняемых над отдельными символами. Разрешенные операции редактирования — это вставка (I - insertion) символа в первую строку, удаление (D - deletion) символа из первой строки и подстановка или замена (substitution или, лучше, R - replace) символа из первой строки символом из второй строки. Обозначим M — “не-операцию“ над правильной буквой (от match).
+\begin{definition}
 
-Строка над алфавитом 1, D, R , М, которая описывает преобразование одной строки в другую, называется редакционным предписанием (предписанием) этих двух строк.
+    \textit{Матрицей $A$ размеров $m \times n$ называется совокупность $m \times n$ элементов из некоторого поля, расположенных в виде таблицы из $m$ строк и $n$ столбцов:}
+    \[
+    A = 
+    \begin{pmatrix}
+    a_{11} & a_{12} & \dots & a_{1n} \\
+    a_{21} & a_{22} & \dots & a_{2n} \\
+    \vdots & \vdots & \ddots & \vdots \\
+    a_{m1} & a_{m2} & \dots & a_{mn}
+    \end{pmatrix} = (a_{ij})_{m \times n},
+    \]
+    \textit{где $a_{ij}$ ($i = 1, 2, \dots, m$; $j = 1, 2, \dots, n$) — элементы матрицы, а $i$ указывает номер строки, а $j$ — номер столбца.}
+\end{definition}
 
-Редакционное расстояние между двумя строками определяется как минимальное число редакционных операций — вставок, удалений и подстановок, необходимое для преобразования первой строки во вторую.
+\begin{definition}
+    \textit{Матрица называется квадратной, если $m = n$, и число $n$ называется порядком матрицы.}
+При этом число $n$ называется порядком матрицы.
+\end{definition}
 
-Подчеркнем, что совпадения операциями не являются и не засчитываются.
-Редакционное расстояние иногда называют расстоянием Левенштейна по статье В. Левенштейна, где оно рассматривалось, вероятно, впервые.\cite{levenshtein}
-
-\subsection{Выравнивание строк}
-
-\hspace{1.25cm}
-Редакционное предписание — это способ представления конкретного преобразования одной строки в другую. Альтернативный (и часто предпочтительный) способ заключается в показе явного выравнивания (alignment) этих двух строк.
-(Глобальное) выравнивание двух строк, Sl и S2, получается вставкой пробелов в строки S1 и S2 (возможно, на их концах) и размещением двух получившихся строк друг над другом так, чтобы каждый символ или пробел одной строки оказался напротив одного символа или пробела другой строки.
-
-Термин «глобальный» подчёркивает, что обе строки участвуют в выравнивании полностью.\cite{gasfild}
-
-\subsection{Расстояние Левенштейна}
-
-\hspace{1.25cm}
-Расстояние Левенштейна, или редакционное расстояние, — метрика cходства между двумя строковыми последовательностями. Чем больше расстояние, тем более различны строки. По сути, это минимальное число односимвольных преобразований (удаления, вставки или замены), необходимых, чтобы превратить одну последовательность в другую.
-
-Цены операций могут зависеть от вида операции (вставка, удаление, замена) и/или от участвующих в ней символов, отражая разную вероятность мутаций в биологии, разную вероятность разных ошибок при вводе текста и т. д. В общем случае:
-
+У квадратной матрицы можно выделить главную и побочную диагонали:
 \begin{itemize}
-\item D(a, b) — цена замены символа a на символ b
-\item D($\lambda$, b) — цена вставки символа b
-\item D(a, $\lambda$) — цена удаления символа a
+    \item Главная диагональ: $a_{11}, a_{22}, \dots, a_{nn}$;
+    \item Побочная диагональ: $a_{n1}, a_{(n-1)2}, \dots, a_{1n}$.
 \end{itemize}
 
-Необходимо найти последовательность замен, минимизирующую суммарную цену. Расстояние Левенштейна является частным случаем этой задачи при ценах:
+\begin{definition}
+Суммой $A + B$ двух матриц $A = (a_{ij})_{m \times n}$ и $B = (b_{ij})_{m \times n}$ называется матрица $C = (c_{ij})_{m \times n}$, где $c_{ij} = a_{ij} + b_{ij}$.
+\end{definition}
 
-\begin{itemize}
-\item D(a, а) = 0
-\item D(a, b) = 1, при a $\neq$ b
-\item D($\lambda$, b) = 1
-\item D(a, $\lambda$) = 1
-\end{itemize}
+\begin{definition}
+Произведением $\lambda \cdot A$ матрицы $A = (a_{ij})_{m \times n}$ на число $\lambda$ называется матрица $C = (c_{ij})_{m \times n}$, где $c_{ij} = \lambda \cdot a_{ij}$. \cite{nikitenko}
+\end{definition}
 
-Как частный случай, так и задачу для произвольных D, решает алгоритм Вагнера — Фишера, приведённый ниже. Здесь и ниже считается, что все D неотрицательны, и действует неравенство треугольника: замена двух последовательных операций одной не увеличит общую цену (например, замена символа x на y, а потом y на z не лучше, чем сразу x на z).
+\subsection{Умножение матриц}
 
-Например, D(’hello’, ‘hallo’) = 1, так как потребуется провести одну замену ‘e’ на ‘a’.
+\begin{definition}
+Произведением $A \cdot B$ матрицы $A = (a_{ij})_{m \times n}$ на матрицу $B = (b_{ij})_{n \times p}$ называется матрица $C = (c_{ij})_{m \times p}$, где
+\[
+c_{ij} = a_{i1}b_{1j} + a_{i2}b_{2j} + \dots + a_{in}b_{nj} = \sum_{k=1}^{n} a_{ik}b_{kj}.
+\]
+\end{definition}
 
-Алгоритм реализуется по следующей формуле:
+Элемент $c_{ij}$ равен сумме попарных произведений соответствующих элементов $i$-й строки матрицы $A$ и $j$-го столбца матрицы $B$.
 
-\begin{equation}
-d(S_1, S_2) = D(M, N), \text{где}\\
-D(i, j) = 
-\begin{cases}
-0,  & \text{i = 0, j = 0} \\
-i,  & \text{i > 0, j = 0} \\
-j,  & \text{i = 0, j > 0} \\
-\min
-\begin{cases}
-D(i-1, j) + 1 & \text{(удаление)} \\
-D(i, j-1) + 1 & \text{(вставка)} \\
-D(i-1, j-1) + 1_{\text{если}\,a_i \neq b_j} & \text{(замена)}
-\end{cases}  & \text{i > 0, j > 0}
-\end{cases}
-\label{levenshtein_formula}
-\end{equation}
-\vspace{0.25cm}
+\noindent Замечание. Перемножать можно только те матрицы, у которых число столбцов первой матрицы равно числу строк второй.
 
-Таким образом, требуется вычислить матрицу расстояний размерностью $len(str_1) * len(str_2)$, следовательно, объем требуемой памяти растет как $O(len(str_1) * len(str_2))$. Иными словами, для двух мегабайтных строк потребуются гигабайты памяти. Фактически в кэше будет хранится почти все матрица редактирований, а она не нужна целиком. Искомая цель – правый нижний элемент.
+\noindent Свойства умножения матриц:
+\begin{align*}
+1) \ & \text{Не является коммутативным: } A \cdot B \neq B \cdot A \text{ в общем случае}; \\
+2) \ & \text{Ассоциативность: } (A \cdot B) \cdot C = A \cdot (B \cdot C); \\
+3) \ & \text{Дистрибутивность: } (A + B) \cdot C = A \cdot C + B \cdot C; \\
+4) \ & \text{Для любой квадратной матрицы } A \text{ порядка } n \text{ справедливо: } A \cdot E = E \cdot A = A,
+\end{align*}
+где $E$ — единичная матрица порядка $n$.
+\cite{nikitenko}
 
-\begin{figure} [H] % Принудительное размещение изображения
-	\centering    
-    \includegraphics[width=0.9\textwidth]{img/exampleLeven.png} % путь к изображению и размер
-    \caption{Пример нахождения расстояния Левенштейна}
-\end{figure}
-
-Для его поиска можно обойтись лишь парой рядов: текущим и предыдущим. А остальные ряды не хранить в памяти. Так будет достигнут конец таблицы, и нижний правый угол и будет искомым значением.
-
-Чтобы использовать еще меньше памяти, можно поменять местами строки, чтобы длина рядов была минимальна. Это существенно экономит память, если одна из строк длинная, а другая короткая.
-
-\subsection{Расстояние Дамерау-Левенштейна}
+\subsection{Умножение матриц по Винограду}
 
 \hspace{1.25cm}
-Если к списку разрешённых операций добавить транспозицию (два соседних символа меняются местами), получается расстояние Дамерау — Левенштейна. Для неё также существует алгоритм, требующий O(len(str1) * len(str2)) операций. Дамерау показал, что 80\% ошибок при наборе текста человеком являются транспозициями. Кроме того, расстояние Дамерау-Левенштейна используется и в биоинформатике.
+Если посмотреть на результат умножения двух матриц, то видно, что каждый элемент представляет собой скалярное произведение соответствующих строки и столбца исходных матриц. Такое умножение допускает предварительную обработку, позволяющую часть работы выполнить заранее.
 
-Цена операции транспозиция также равна 1. При работе алгоритма Левенштейна эта операция реализовалась бы двумя заменами и стоила бы 2. Таким образом, расстояние Дамерау-Левенштейна в некоторых случаях даёт меньший результат, чем расстояние Левенштейна.
+Рассмотрим два вектора $V = (v_1, v_2, v_3, v_4)$ и $W = (w_1, w_2, w_3, w_4)$. Их скалярное произведение равно:
+\[
+V \cdot W = v_1 w_1 + v_2 w_2 + v_3 w_3 + v_4 w_4.
+\]
 
-В формулу \ref{levenshtein_formula} добавляется следующая часть:
+Это равенство можно переписать в виде:
+\[
+V \cdot W = (v_1 + w_2)(v_2 + w_1) + (v_3 + w_4)(v_4 + w_3) - v_1 v_2 - v_3 v_4 - w_1 w_2 - w_3 w_4.
+\]
 
-\begin{equation}
-\begin{cases}
-i > 1 \\
-j > 1 \\
-\text{str}_1[i-1] = \text{str}_2[j] \\
-\text{str}_1[i] = \text{str}_2[j-1]
-\end{cases}
-\label{new_part_formula}
-\end{equation}
+Эквивалентность двух выражений можно легко проверить. Кажется, что второе выражение задает больше работы, чем первое: вместо четырёх умножений мы видим шесть, а вместо трёх сложений — десять. Менее очевидно, что правое выражение допускает предварительную обработку: его части можно вычислить заранее и сохранить для каждой строки первой матрицы и для каждого столбца второй.
 
-В результате получается следующая формула для алгоритма Дамерау-Левенштейна:
+На практике это означает, что после предварительной обработки остаётся выполнить два умножения и семь сложений.
+\cite{algolib}
 
-\begin{equation}
-d(S_1, S_2) = D(M, N), \text{где}\\
-D(i, j) = 
-\begin{cases}
-0,  & \text{i = 0, j = 0} \\
-i,  & \text{i > 0, j = 0} \\
-j,  & \text{i = 0, j > 0} \\
-\min
-\begin{cases}
-D(i-1, j) + 1 & \text{(удаление)} \\
-D(i, j-1) + 1 & \text{(вставка)} \\
-D(i-1, j-1) + 1_{\text{если}\,a_i \neq b_j} & \text{(замена)} \\
-\begin{cases}
-i > 1 \\
-j > 1 \\
-\text{str}_1[i-1] = \text{str}_2[j] \\
-\text{str}_1[i] = \text{str}_2[j-1]
-\end{cases}  & \text{(транспозиция)}
-\end{cases}  & \text{i > 0, j > 0}
-\end{cases}
-\label{damerau_formula}
-\end{equation}
+\subsection{Анализ алгоритма Винограда}
+
+\hspace{1.25cm}
+Рассмотрим случай с чётной общей размерностью $b$. Результаты подсчета сложений и умножений сведены в таблицу~\ref{table:analis_Vinigrad}.
+
+\begin{table}[H]
+\centering
+\caption{Анализ сложности алгоритма Винограда}
+\begin{tabular}{|c|c|c|}
+\hline
+Этап & Умножения & Сложения \\ \hline
+Предварительная обработка матрицы $G$ & $a d$ & $a (d - 1)$ \\ \hline
+Предварительная обработка матрицы $H$ & $c d$ & $c (d - 1)$ \\ \hline
+Вычисление матрицы $R$ & $a c d$ & $a c (2d + d + 1)$ \\ \hline
+Всего & $\frac{abc + ab + bc}{2}$ & $\frac{a(b - 2) + c(b - 2) + ac(3b + 2)}{2}$ \\ \hline
+\end{tabular}
+\label{table:analis_Vinigrad}
+\end{table}
+\cite{algolib}
 
 \newpage
