--- a/lab_02/отчёт/14-conclusion.tex
+++ b/lab_02/отчёт/14-conclusion.tex
@@ -1,31 +1,32 @@
 % Заключение
-\section*{Заключение}
+\begin{center}
+    \MakeUppercase{\large Заключение}
+\end{center}
+\addcontentsline{toc}{section}{Заключение} % Добавляем в оглавление
 
-\hspace{1.25cm}
-В результате выполнения лабораторной работы были исследованы алгоритмы вычисления расстояния Левенштейна и Дамерау-Левенштейна в матричной, рекурсивно-матричной и рекурсивной реализациях.
+В результате выполнения лабораторной работы были рассмотрены различные алгоритмы умножения матриц (стандартный алгоритм, алгоритм Винограда и его оптимизированная версия). Также была изучена оценка сложности алгоритмов и получены навыки по их улучшению.
 
 \vspace{0.25cm}
 В частности:
 
 \begin{itemize}
 
-\item были рассмотрены алгоритмы вычисления расстояния Левенштейна и Дамерау-Левенштейна;
+\item были рассмотрены стандартный алгоритм умножения матриц и алгоритм Винограда;
 
-\item применён метод динамического программирования для матричных реализаций алгоритмов;
+\item алгоритм Винограда был оптимизирован методом по варианту;
 
-\item сравнены матричная, рекурсивно-матричная и рекурсивная реализации алгоритмов;
+\item проведена теоретическая оценка сложности стандартного алгоритма умножения матриц, алгоритма Винограда и его оптимизированной версии;
 
-\item сравнены алгоритмы вычисления расстояния Левенштейна и Дамерау-Левенштейна.
+\item реализованы три алгоритма умножения матриц на выбранном языке программирования;
+
+\item эффективность этих алгоритмов была сравнена на практике.
 
 \end{itemize}
 
-\subsection*{Вывод}
-
-\hspace{1.25cm}
-В ходе лабораторной работы были рассмотрены, спроетированны и запрограммированы алгоритмы нахождения расстояний Левенштейна и Дамерау-Левенштейна в их матричных, рекурсивных и рекурсивно-матричных реализациях.
+В ходе лабораторной работы были рассмотрены, спроетированны и запрограммированы стандартный, Винограда и оптимизированный Винограда алгоритмы умножения матриц.
 
 Были разработаны тесты для всех алгоритмов, учитывающие крайние случаи, ожидаемых результатов которых достигли все реализации.
 
-Сравнения полученных программ показали, что алгоритм Левенштейна работает быстрее алгоритма Дамерау-Левенштейна за счёт меньшего числа проверок, однако это приводит к другим результатам, если возможны перестановки символов. Матричный вариант оказался самым быстрым среди всех, на втором месте — рекурсивно-матричный метод, который снижает количество рекурсивных вызовов и избегает повторных вычислений, используя матрицу для хранения уже найденных значений. Однако этот метод требует дополнительной памяти, а проверки на уже вычисленные значения не всегда ускоряют процесс и также занимают время.
+Сравнения полученных программ показали, что алгоритм Винограда работает быстрее стандартного алгоритма умножения матриц за счёт уменьшения трудоёмности вычислений. Однако на нечётных размерностях он считается медленнее за счёт корректировки вычисленного значения в дополнительном цикле.
 
 \newpage
