--- a/lab_02/отчёт/13-research.tex
+++ b/lab_02/отчёт/13-research.tex
@@ -2,104 +2,55 @@
 \section{Исследовательская часть}
 
 \hspace{1.25cm}
-Для сравнения времени реализаций алгоритмов Левенштейна и Дамерау-Левенштейна в их матричных, рекурсивных и рекурсивно-матричных реализациях программа была запущена на рандомно сгенерированных строках длинами от 1 до 9 с шагом 2 по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (см. Рис.~\ref{fig:graph_all} и Рис.~\ref{fig:table_all})
+Для сравнения времени реализаций стандартного алгоритма, алгоритма Винограда и его оптимизированной версии программа была запущена на рандомно сгенерированных квадратных матрицах из целых чисел от -10 до 10 на чётных размерностях от 50 до 250 с шагом 50 (рисунок~\ref{fig:graph_even} и таблица~\ref{table:table_even}) и на нечётных размерностях от 51 до 251 с шагом 50 (график~\ref{fig:graph_odd} и таблица~\ref{table:table_odd}) (так как при нечётной размерности в алгоритме Винограда добавляется цикл) по 50 замеров каждая матрица, среднее значение было вынесено в таблицу и для наглядности изображено на графике.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{img/graph_all.png}
-    \caption{График времени работы всех алгоритмов в зависимости от длин строк}
-    \label{fig:graph_all} % Метка для ссылки на картинку
+    \includegraphics[width=1\textwidth]{img/graph_even.png}
+    \caption{График времени работы алгоритмов в зависимости от чётных размерностей матриц}
+    \label{fig:graph_even} % Метка для ссылки на картинку
 \end{figure}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|l|c|c|c|c|c|}
+        \hline
+        \textbf{Алгоритм} & \textbf{50} & \textbf{100} & \textbf{150} & \textbf{200} & \textbf{250}\\
+        \hline
+        Стандартный & 0.0053 & 0.021 & 0.53 & 1.2 & 2.3 \\
+        Винограда & 0.012 & 0.11 & 0.35 & 0.84 & 1.7 \\
+        Винограда (оптимизированный) & 0.016 & 0.12 & 0.45 & 0.96 & 1.7 \\
+        \hline
+    \end{tabular}
+    \caption{Таблица времени (сек) работы алгоритмов в зависимости от чётных размерностей матриц}
+    \label{table:table_even}
+\end{table}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{img/table_all.png}
-    \caption{Таблица времени (сек) работы всех алгоритмов в зависимости от длин строк (сим)}
-    \label{fig:table_all}
+    \includegraphics[width=1\textwidth]{img/graph_odd.png}
+    \caption{График времени работы алгоритмов в зависимости от нечётных размерностей метриц}
+    \label{fig:graph_odd} % Метка для ссылки на картинку
 \end{figure}
 
-\subsection{Сравнение работы матричной, рекурсивной и рекурсивно-матричной реализаций алгоритмов}
-
-\hspace{1.25cm}
-Из графиков, приведённых выше, очевидно, что матричная реализация обоих алгоритмов быстро становится эффективнее рекурсивной на много порядков. Это происходит из-за того, что при рекурсии даже на небольшой длине строк происходит много рекурсивных вызовов для подстрок, на что тратится большое количество времени и памяти. В то время как для матричной реализации данные, на основе которых вычисляются следующие значения, хранятся в двух массивах длинной в кратчайшую из двух строк, что экономит как время, так и память. При этом рекурсивно-матричная реализация оказалась почти столь же быстрой, как и матричная благодаря исключению повторных вычислений идентичных веток рекурсии, что в разы сократило количество вычислений.
-
-\subsection{Сравнение работы алгоритмов Левенштейна и Дамерау-Левенштейна (отдельно каждый способ)}
-
-\hspace{1.25cm}
-Отдельно было измерено время работы алгоритмов Левенштейна и Дамерау-Левенштейна в их матричных реализациях на большем диапазоне длин рандомно сгенерированных строк (от 25 символов до 125 с шагом 25) по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (см. Рис.~\ref{fig:graph_mat} и Рис.~\ref{fig:table_mat}).
-
-\begin{figure}[H]
+\begin{table}[H]
     \centering
-    \includegraphics[width=1\textwidth]{img/graph_mat.png}
-    \caption{График времени работы матричных реализаций алгоритмов в зависимости от длин строк}
-    \label{fig:graph_mat}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\textwidth]{img/table_mat.png}
-    \caption{Таблица времени (сек) работы матричных реализаций алгоритмов в зависимости от длин строк (сим)}
-    \label{fig:table_mat}
-\end{figure}
-
-Отдельно было измерено время работы алгоритмов Левенштейна и Дамерау-Левенштейна в их рекурсивных реализациях на малом диапазоне длин рандомно сгенерированных строк (от 1 символа до 9 с шагом 2) по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (см. Рис.~\ref{fig:graph_rec} и Рис.~\ref{fig:table_rec}).
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\textwidth]{img/graph_rec.png}
-    \caption{График времени работы рекурсивных реализаций алгоритмов в зависимости от длин строк}
-    \label{fig:graph_rec}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\textwidth]{img/table_rec.png}
-    \caption{Таблица времени (сек) работы рекурсивных реализаций алгоритмов в зависимости от длин строк (сим)}
-    \label{fig:table_rec}
-\end{figure}
-
-Отдельно было измерено время работы алгоритмов Левенштейна и Дамерау-Левенштейна в их рекурсивно-матричных реализациях на большем диапазоне длин рандомно сгенерированных строк (от 25 символа до 125 с шагом 25) по 50 замеров каждая строка, среднее значение было вынесено в таблицу и для наглядности изображено на графике (см. Рис.~\ref{fig:graph_rec-mat} и Рис.~\ref{fig:table_rec-mat}).
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\textwidth]{img/graph_rec-mat.png}
-    \caption{График времени работы рекурсивно-матричных реализаций алгоритмов в зависимости от длин строк}
-    \label{fig:graph_rec-mat}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\textwidth]{img/table_rec-mat.png}
-    \caption{Таблица времени (сек) работы рекурсивно-матричных реализаций алгоритмов в зависимости от длин строк (сим)}
-    \label{fig:table_rec-mat}
-\end{figure}
-
-Видно, что алгоритм Левенштейна оказался немного быстрее алгоритма Дамерау-Левенштейна из-за дополнительной проверки во втором, что компенсируется большим расстоянием в результате первого при наличии перестановок букв в строках.
-
-\subsection{Сравнение работы матричных и рекурсивно-матричных алгоритмов Левенштейна и Дамерау-Левенштейна}
-
-\hspace{1.25cm}
-Так как на общем графике матричный и рекурсивно-матричный алгоритмы были очень близки по скорости, были проведены отдельные замеры (на 5-и точках с длиной строк от 25 до 125 символов с шагом 25 по 50 запусков), среднее значение было вынесено в таблицу и для наглядности изображено на графике (см. Рис.~\ref{fig:graph_mat_rec-mat} и Рис.~\ref{fig:table_mat_rec-mat}).
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\textwidth]{img/graph_mat_rec-mat.png}
-    \caption{График времени работы матричных и рекурсивно-матричных реализаций алгоритмов в зависимости от длин строк}
-    \label{fig:graph_mat_rec-mat}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\textwidth]{img/table_mat_rec-mat.png}
-    \caption{Таблица времени (сек) работы матричных и рекурсивно-матричных реализаций алгоритмов в зависимости от длин строк (сим)}
-    \label{fig:table_mat_rec-mat}
-\end{figure}
-
-По результатам приведённых графиков видно, что и в алгоритме Левенштейна и Дамерау-Левенштейна рекурсивно-матричный метод работает дольше матричного. Это объясняется затратами на вызов функции при рекурсии и на дополнительные проверки является ли искомое значение уже посчитанным. На небольших длинах строк разница в скорости работы алгоритмов отличается несущественно, однако с увеличением данных растёт и разница во времени.
+    \begin{tabular}{|l|c|c|c|c|c|}
+        \hline
+        \textbf{Алгоритм} & \textbf{51} & \textbf{101} & \textbf{151} & \textbf{201} & \textbf{251}\\
+        \hline
+        Стандартный & 0.0091 & 0.076 & 0.18 & 0.54 & 1.1 \\
+        Винограда & 0.0066 & 0.053 & 0.24 & 0.41 & 1.0 \\
+        Винограда (оптимизированный) & 0.01 & 0.048 & 0.24 & 0.74 & 0.99 \\
+        \hline
+    \end{tabular}
+    \caption{Таблица времени (сек) работы алгоритмов в зависимости от нечётных размерностей матриц}
+    \label{table:table_odd}
+\end{table}
 
 \subsection*{Вывод}
 
 \hspace{1.25cm}
-По проведённым исследованиям была выявлена большая скорость работы алгоритма Левенштейна над алгоритмом Дамерау-Левенштейна за счёт уменьшения числа проверок, что, однако, даёт иной результат при наличии возможности перестановок символов в строках. При этом матричный вариант выигрывает по скорости в обоих алгоритмах, на втором месте оказался рекурсивно-матричный метод, который делает меньше рекурсивных вызовов, чем рекурсивный метод, и исключает повторные вычисления идентичных веток, так как при вызове каждой новой функции в этом методе передаётся в качестве аргумента ссылка на матрицу, которая хранит уже посчитанные значения, но на эту матрицу также необходима память, а проверки на уже вычисленные значения не всегда приносят положительный результат и занимают время.
+По проведённым исследованиям была выявлена большая скорость работы алгоритма Винограда над стандартным алгоритмом за счёт уменьшения трудоёмкости вычислений и чем больше размерность матрицы, тем больше видна разница в скорости алгоритмов. Однако на нечётных размерностях такого выигрыша не наблюдается за счёт дополнительного цикла, корректирующего вычисленное значение в алгоритме Винограда.
 
 \newpage
