--- a/lab_02/отчёт/20-sources.tex
+++ b/lab_02/отчёт/20-sources.tex
@@ -1,15 +1,18 @@
-% Список литературы
-\renewcommand{\refname}{Список использованных источников}
+% Список использованных источников
+\begin{center}
+    \MakeUppercase{\large Список использованных источников}
+\end{center}
+\addcontentsline{toc}{section}{Список использованных источников} % Добавляем в оглавление
+
+% Удаление "Список литературы" по умолчанию и получившихся пробелов
+\renewcommand{\refname}{}
+\vspace{-11mm}
 
 \begin{thebibliography}{9}
     \bibitem{process_time} Python Documentation. \textit{time.process\_time() - Документация по стандартной библиотеке Python}. Дата обращения: 03 сентября 2024 г. [Электронный ресурс]. Доступно по адресу: \url{https://docs-python.ru/standart-library/modul-time-python/funktsija-process-time-modulja-time/}
     
-    \bibitem{tirinox} Tirinox. \textit{Алгоритм Левенштейна на Python: реализация и объяснение}. Дата обращения: 02 сентября 2024 г. [Электронный ресурс]. Доступно по адресу: \url{https://tirinox.ru/levenstein-python/}
+    \bibitem{algolib} Algolib: коллекция алгоритмов. \textit{Умножение матриц}. Дата обращения: 19 сентября 2024 г. [Электронный ресурс]. Доступно по адресу: \url{https://algolib.narod.ru/Math/Matrix.html}
     
-    \bibitem{gasfild} Гасфилд Дэн. \textit{Строки, деревья и последовательности в алгоритмах}: Информатика и вычислительная биология / Пер. с англ. И. В. Романовского. — СПб.: Невский Диалект; БХВ-Петербург, 2003. — 654 с: ил.
-    
-    \bibitem{levenshtein} Левенштейн В. И. \textit{Двоичные коды с исправлением выпадений, вставок и замещений символов}. Доклады Академий Наук СССР, 1965. 163.4:845-848.
-    
-    \bibitem{niezov} Ниёзов Д. Л. \textit{Применение методов нечеткого сравнения строк в прикладных задачах}: Выпускная квалификационная работа (Бакалаврская работа). — Тольятти: Тольяттинский государственный университет, 2020. — 45 стр.
-    
+    \bibitem{nikitenko} Никитенко Е.В. Линейная алгебра и теория матриц. Учебное пособие для студентов всех форм обучения направления «Информатика и вычислительная техника» / Рубцовский индустриальный институт. – Рубцовск, 2022. – 56 с.
+  
 \end{thebibliography}
